--- a/styles/main.css
+++ b/styles/main.css
@@ -286,7 +286,8 @@ button:hover,
   margin-top: 64px;
 }
 
-.hero-title h1 {
+.hero-title h1,
+.hero-title h2 {
   letter-spacing: 5px;
   font-size: 3.5rem;
   font-weight: 400;
